Added Terraform structure

--- a/Personal_Portfolio/index.html
+++ b/Personal_Portfolio/index.html
@@ -110,7 +110,7 @@
     </div>
 
     <footer>
-        <a href="#">My Portfolio</a>
+        <a href="#">© 2025 My Portfolio</a>
         <div class="socials">
             <a href="#">Github <i class="fab fa-github"></i></a>
             <a href="#">LinkedIn <i class="fab fa-linkedin"></i></a>
